<resources>
    <string name="app_name">DataGoT</string>
    <string name="characters">Characters</string>
    <string name="battles">Battles</string>
    <string name="places">Places</string>
    <string name="houses">Houses</string>
    <string name="episodes">Episodes</string>
    <string name="titles">Titles</string>
    <string name="origin">Origin</string>
    <string name="siblings">Siblings</string>
    <string name="spouse">Spouse</string>
    <string name="lovers">Lovers</string>
    <string name="religion">Religion</string>
    <string name="allegiances">Allegiances</string>
    <string name="gender">Gender</string>
    <string name="house">House</string>
    <string name="alive">Alive</string>
    <string name="year_of_death">Year of Death</string>
    <string name="father">Father</string>
    <string name="empty_characters">No Characters</string>
    <string name="empty_battles">No Battles</string>
    <string name="still_alive">Still Alive</string>
    <string name="conflict">Conflict</string>
    <string name="factions_one">Factions One</string>
    <string name="commanders">Commanders</string>
    <string name="forces">Forces</string>
    <string name="factions_two">Factions Two</string>
    <string name="continents">Continents</string>
    <string name="cities">Cities</string>
    <string name="castles">Castles</string>
    <string name="neighbors">Neighbors</string>
    <string name="founders">Founders</string>
    <string name="rulers">Rulers</string>
    <string name="religions">Religions</string>
    <string name="type">Type</string>
</resources>