<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="character"
            type="mx.com.charlyescaz.datagot.models.CharacterViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary">

        <include
            android:id="@+id/i_toolbar"
            layout="@layout/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_photo"
            loadUrl="@{character.imgUrl}"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_bastards"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@color/secondary"
            android:textSize="@dimen/text_title"
            android:textStyle="bold"
            android:text="@{character.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_photo"
            tools:text="Character Name " />

        <TextView
            android:id="@+id/tv_actor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary"
            android:text="@{character.actor}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            tools:text="Actor Name" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="14dp"
            app:layout_constraintTop_toBottomOf="@id/tv_actor"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="0dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/gender"
                        android:textColor="@color/secondary"
                        android:textSize="@dimen/text_sub_title"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/house"
                        android:textColor="@color/secondary"
                        android:textSize="@dimen/text_sub_title"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@{character.gender}"
                        android:textColor="@color/secondary"
                        tools:text="Female" />

                    <TextView
                        android:id="@+id/tv_house"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@{character.house}"
                        android:textColor="@color/secondary"
                        tools:text="Winterfell" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/alive"
                        android:textColor="@color/secondary"
                        android:textSize="@dimen/text_sub_title"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/year_of_death"
                        android:textColor="@color/secondary"
                        android:textSize="@dimen/text_sub_title"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_alive"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/secondary"
                        tools:text="Yes" />

                    <TextView
                        android:id="@+id/tv_death"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/secondary"
                        android:text="@string/still_alive" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/origin"
                    android:textColor="@color/secondary"
                    android:textSize="@dimen/text_sub_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_origin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary"
                    tools:text="Winterfell" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/titles"
                    android:textColor="@color/secondary"
                    android:textSize="@dimen/text_sub_title"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tv_titles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary"
                    tools:text="Lord, Sr" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/father"
                    android:textColor="@color/secondary"
                    android:textSize="@dimen/text_sub_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_father"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary"
                    android:text="@{character.father}"
                    tools:text="Winterfell" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/siblings"
                    android:textColor="@color/secondary"
                    android:textSize="@dimen/text_sub_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_siblings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary"
                    tools:text="None" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/spouse"
                    android:textColor="@color/secondary"
                    android:textSize="@dimen/text_sub_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_spouse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary"
                    tools:text="None" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/lovers"
                    android:textColor="@color/secondary"
                    android:textSize="@dimen/text_sub_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_lovers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary"
                    tools:text="None" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/religion"
                    android:textColor="@color/secondary"
                    android:textSize="@dimen/text_sub_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_religion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary"
                    tools:text="None" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/allegiances"
                    android:textColor="@color/secondary"
                    android:textSize="@dimen/text_sub_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_allegiances"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary"
                    tools:text="None" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
